# ActionVouch

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  verify_actionvouch.py
.github/workflows/: build.yml  ci.yml
actionvouch/: __init__.py  __main__.py  _version.py  app.py  app_ui.py  approvals.py  browser_smoke.py  cli.py  compliance.py  console.py  dashboard.py  evidence_room.py  importers.py  launcher.py  mcp_scan.py  models.py  paths.py  permissions.py  policies.py  report.py  research_watch.py  response_quality.py  scoring.py  smoke.py  store.py  verify.py
docs/actionvouch-release/: claim-register.md
examples/actionvouch/: incomplete_project.json  internal_pilot_project.json  manual_intake_sample.md  sample_project.json
examples/actionvouch/import_fixtures/: crm_realistic_export.json  make_realistic_export.json  mcp_realistic_manifest.json  n8n_realistic_export.json  workspace_ai_realistic_export.json  zapier_realistic_export.json
examples/actionvouch/import_templates/: README.md  crm_automation_summary_template.json  make_summary_template.json  manual_agent_inventory_template.json  mcp_config_summary_template.json  n8n_summary_template.json  pilot_metrics_template.json  support_workflow_notes_template.md  workspace_ai_usage_template.json  zapier_summary_template.json
examples/actionvouch/mcp_manifests/: malformed_not_object.json  mixed_client_config.json  readonly_filesystem_server.json  remote_http_no_catalog.json  write_destructive_crm_server.json
packaging/: README.md  actionvouch.spec
tests/: test_actionvouch.py  test_actionvouch_app.py  test_actionvouch_browser_smoke.py  test_actionvouch_launcher.py  test_actionvouch_mcp_scan.py  test_actionvouch_verify.py  test_actionvouch_wizard.py
